# PINN_TurbulentChannelFlow

./: CMakeLists.txt  Dockerfile  Final_Script.ipynb  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
PINN_RANS_ChannelFlow/model_checkpoints/: rans_channel_wf-15000.pt-2000.pt  rans_channel_wf-20000.pt-7000.pt  rans_channel_wf-24000.pt-11000.pt  rans_channel_wf-28000.pt-15000.pt  rans_channel_wf-29000.pt-16000.pt  rans_channel_wf-30000.pt-17000.pt  rans_channel_wf-31000.pt-18000.pt  rans_channel_wf-33000.pt-20000.pt  rans_channel_wf-38000.pt-25000.pt  rans_channel_wf-39000.pt-26000.pt  rans_channel_wf-40000.pt-27000.pt  rans_channel_wf-42000.pt-1000.pt  rans_channel_wf-{step}.pt-1000.pt  rans_channel_wf.ckpt-10000.pt  rans_channel_wf.ckpt-5000.pt
channelKEpsilon/0/: U
channelKEpsilon/100/: k  nut  p
channelKEpsilon/1000/: epsilon  k  nut  p
channelKEpsilon/200/: p  phi
channelKEpsilon/300/: U  nut
channelKEpsilon/400/: U  p
channelKEpsilon/500/: U  k  phi
channelKEpsilon/600/: epsilon  k  phi
channelKEpsilon/700/: U  epsilon  k  nut  p
channelKEpsilon/800/: U  k  nut  p  phi
channelKEpsilon/900/: U
channelKEpsilon/constant/: turbulenceProperties
channelKEpsilon/constant/polyMesh/: boundary  faces  neighbour
channelKEpsilon/postProcessing/samplingSets/0/: midLine_y.csv
channelKEpsilon/postProcessing/samplingSets/1000/: midLine_y.csv
channelKEpsilon/postProcessing/samplingSets/200/: midLine_y.csv
channelKEpsilon/postProcessing/samplingSets/300/: midLine_y.csv
channelKEpsilon/postProcessing/samplingSets/500/: midLine_y.csv
channelKEpsilon/postProcessing/samplingSets/900/: midLine_y.csv
channelKEpsilon_Python/: model.py  scipt.ipynb
channelKEpsilon_Python/PINN_RANS_ChannelFlow/model_checkpoints/: rans_channel_wf-13000.pt  rans_channel_wf-19000.pt-6000.pt  rans_channel_wf-22000.pt-9000.pt  rans_channel_wf-25000.pt-12000.pt  rans_channel_wf-32000.pt-19000.pt  rans_channel_wf-36000.pt-23000.pt  rans_channel_wf-41000.pt  rans_channel_wf-46000.pt-5000.pt  rans_channel_wf-50000.pt-9000.pt  rans_channel_wf.ckpt-12000.pt  rans_channel_wf.ckpt-2000.pt  rans_channel_wf.ckpt-3000.pt  rans_channel_wf.ckpt-4000.pt  rans_channel_wf.ckpt-8000.pt  rans_channel_wf.ckpt-9000.pt
logs/: training_log.log.docx
openfoam/channelKEpsilon/: Allclean  log.simpleFoam  run_simulation.sh
openfoam/channelKEpsilon/0/: epsilon  k  nut  p
openfoam/channelKEpsilon/100/: U  epsilon  phi
openfoam/channelKEpsilon/1000/: U  phi
openfoam/channelKEpsilon/200/: U  epsilon  k  nut
openfoam/channelKEpsilon/300/: epsilon  k  p  phi
openfoam/channelKEpsilon/400/: epsilon  k  nut  phi
openfoam/channelKEpsilon/500/: epsilon  nut  p
openfoam/channelKEpsilon/600/: U  nut  p
openfoam/channelKEpsilon/700/: phi
openfoam/channelKEpsilon/800/: epsilon
openfoam/channelKEpsilon/900/: epsilon  k  nut  p  phi
openfoam/channelKEpsilon/constant/: transportProperties
openfoam/channelKEpsilon/constant/polyMesh/: owner  points
openfoam/channelKEpsilon/postProcessing/samplingSets/100/: midLine_y.csv
openfoam/channelKEpsilon/postProcessing/samplingSets/400/: midLine_y.csv
openfoam/channelKEpsilon/postProcessing/samplingSets/600/: midLine_y.csv
openfoam/channelKEpsilon/postProcessing/samplingSets/700/: midLine_y.csv
openfoam/channelKEpsilon/postProcessing/samplingSets/800/: midLine_y.csv
openfoam/channelKEpsilon/system/: blockMeshDict  controlDict  fvSchemes  fvSolution
output/model_checkpoints/: rans_channel_wf-14000.pt-1000.pt  rans_channel_wf-16000.pt-3000.pt  rans_channel_wf-17000.pt-4000.pt  rans_channel_wf-18000.pt-5000.pt  rans_channel_wf-21000.pt-8000.pt  rans_channel_wf-23000.pt-10000.pt  rans_channel_wf-26000.pt-13000.pt  rans_channel_wf-27000.pt-14000.pt  rans_channel_wf-34000.pt-21000.pt  rans_channel_wf-35000.pt-22000.pt  rans_channel_wf-37000.pt-24000.pt  rans_channel_wf-43000.pt-2000.pt  rans_channel_wf-44000.pt-3000.pt  rans_channel_wf-45000.pt-4000.pt  rans_channel_wf-47000.pt-6000.pt  rans_channel_wf-48000.pt-7000.pt  rans_channel_wf-49000.pt-8000.pt  rans_channel_wf.ckpt-1000.pt  rans_channel_wf.ckpt-11000.pt  rans_channel_wf.ckpt-6000.pt  rans_channel_wf.ckpt-7000.pt
src/: __init__.py
src/config/: __init__.py  config.py
src/models/: __init__.py  pinn_rans_model.py
src/physics/: __init__.py  equations.py
src/utils/: __init__.py
src/visualization/: __init__.py  plotter.py
